force-app/main/default/objects/TOPAUTHIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CLIENT_ID__c</fullName>
        <label>CLIENT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT_SECRET__c</fullName>
        <label>CLIENT SECRET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_APP_URL__c</fullName>
        <label>SF APP URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_URL__c</fullName>
        <label>SF URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPAUTH_AUTHEN_URL__c</fullName>
        <label>TOPAUTH AUTHEN URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPAUTH_REDIRECT_URL__c</fullName>
        <label>TOPAUTH_REDIRECT_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPAUTH_URL__c</fullName>
        <label>TOPAUTH_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TOPAUTHIntegration</label>
</CustomObject>